// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> Snaphot must match design 1`] = `
<span
  className="Label bg-blue ml-1"
>
   
  design label
</span>
`;

exports[`<Label /> Snaphot must match labelDefault 1`] = `
<span
  className="Label bg-blue"
>
   
  default label
</span>
`;

exports[`<Label /> Snaphot must match labelOutline 1`] = `
<span
  className="Label Label--outline"
>
   
  outlined label
</span>
`;

exports[`<Label /> Snaphot must match labelOutlineGreen 1`] = `
<span
  className="Label Label--outline Label--outline-green"
>
   
  green outlined label
</span>
`;

exports[`<Label /> Snaphot must match labelThemeDarkGray 1`] = `
<span
  className="Label Label--gray-darker"
>
   
  dark gray label
</span>
`;

exports[`<Label /> Snaphot must match labelThemeGray 1`] = `
<span
  className="Label Label--gray"
>
   
  gray label
</span>
`;

exports[`<Label /> Snaphot must match labelThemeOrange 1`] = `
<span
  className="Label Label--orange"
>
   
  orange label
</span>
`;
